<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/activity_horizontal_padding"
        android:paddingVertical="@dimen/activity_vertical_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/cardview_horizontal_margin"
            android:layout_marginVertical="@dimen/cardview_vertical_margin"
            app:cardCornerRadius="@dimen/cardview_radius"
            app:contentPadding="@dimen/cardview_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_user_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/home_hello1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <TextView
                    android:id="@+id/text_user_broadcast"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/cardview_horizontal_margin"
            android:layout_marginVertical="@dimen/cardview_vertical_margin"
            app:cardCornerRadius="@dimen/cardview_radius"
            app:contentPadding="@dimen/cardview_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_devices_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/home_devices_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <TextView
                    android:id="@+id/text_devices_count"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:text="@string/home_devices_count"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/text_devices_find"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/home_devices_find"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_shortcut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/cardview_horizontal_margin"
            android:layout_marginVertical="@dimen/cardview_vertical_margin"
            app:cardCornerRadius="@dimen/cardview_radius"
            app:contentPadding="@dimen/cardview_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_shortcut_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="快捷方式"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_weight="1" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_weight="1" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_weight="1" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_weight="1" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_weight="1" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_weight="1" />

                    </TableRow>

                </TableLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="Voice assistant"
        android:focusable="true"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_voice_24" />

</androidx.constraintlayout.widget.ConstraintLayout>
